adding google vertex and documenting

--- a/notebook/Youtube_table_data.ipynb
+++ b/notebook/Youtube_table_data.ipynb
@@ -2615,15 +2615,17 @@
    "id": "4380fecc",
    "metadata": {},
    "source": [
-    "### Conclusion \n",
-    "Even though the accuracy score 78% we got a score of 0 percent in f1-score for viral label that means the model didn't predict any viral video \n",
-    "The reason for this is because we give the model a leaky data (metrics after posting the video) , the model exploit those metrics and it got \"lazy\" in predicting viralty \n",
-    "### Decision :\n",
-    "After this result we will remove any leaky data (likes , views ect) and use before posting metrics (title, caption ect) , that will give us the option to add other competitors data using scraping method \n",
+    "### Conclusion\n",
+    "- Although the model achieved an accuracy of 78%, the **F1-score for the viral class was 0%**, meaning it failed to predict any viral videos correctly.  \n",
+    "- The main reason: the model was trained on **leaky data** (post-publication metrics like views and likes), which it exploited, resulting in artificially high accuracy but poor predictive power for true virality.\n",
     "\n",
-    "this will be treated in the [Youtube_Niche_Data.ipynb]\n",
+    "### Decision / Next Steps\n",
+    "- Remove any leaky features (views, likes, etc.) and focus on **pre-publication metrics** (title, caption, duration, transcript).  \n",
+    "- This approach allows us to incorporate **competitor data** collected via scraping.  \n",
+    "- These steps will be implemented in the notebook: [Youtube_Niche_Data.ipynb].\n",
     "\n",
-    "================="
+    "\n",
+    "---\n"
    ]
   },
   {
